frame/support/test/tests/benchmark_ui/missing_call.stderr
error: No valid #[extrinsic_call] or #[block] annotation could be found in benchmark function body.
  --> tests/benchmark_ui/missing_call.rs:10:13
   |
10 |     fn bench() {}
   |                ^^
