frame/support/test/tests/benchmark_ui/missing_call.rs
use frame_support::benchmarking::*;
#[allow(unused_imports)]
use frame_support_test::Config;

#[benchmarks]
mod benches {
	use super::*;

	#[benchmark]
	fn bench() {}
}

fn main() {}
